--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Voucher/UpdateVC.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Voucher/UpdateVC.cshtml
@@ -14,37 +14,37 @@
         <form asp-action="UpdateVC">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="MaVoucher" class="control-label"></label>
+                <label class="control-label">Mã Voucher</label>
                 <input asp-for="MaVoucher" class="form-control" />
                 <span asp-validation-for="MaVoucher" class="text-danger"></span>
-                <span class="text-danger">@ViewData["MaVoucher"]</span>
+         @*        <span class="text-danger">@ViewData["MaVoucher"]</span> *@
             </div>
             <div class="form-group">
-                <label asp-for="Ten" class="control-label"></label>
+                <label class="control-label">Tên Voucher</label>
                 <input asp-for="Ten" class="form-control" />
                 <span asp-validation-for="Ten" class="text-danger"></span>
                 <span class="text-danger">@ViewData["Ten"]</span>
             </div>
             <div class="form-group">
-                <label asp-for="GiaGiamToiThieu" class="control-label"></label>
+                <label class="control-label">Gía giảm tối thiểu</label>
                 <input asp-for="GiaGiamToiThieu" class="form-control" />
                 <span asp-validation-for="GiaGiamToiThieu" class="text-danger"></span>
                 <span class="text-danger">@ViewData["GiaGiamToiThieu"]</span>
             </div>
             <div class="form-group">
-                <label asp-for="GiaGiamToiDa" class="control-label"></label>
+                <label class="control-label">Gía giảm tối đa</label>
                 <input asp-for="GiaGiamToiDa" class="form-control" />
                 <span asp-validation-for="GiaGiamToiDa" class="text-danger"></span>
                 <span class="text-danger">@ViewData["GiaGiamToiDa"]</span>
             </div>
             <div class="form-group">
-                <label asp-for="NgayBatDau" class="control-label"></label>
+                <label class="control-label">Ngày bắt đầu</label>
                 <input asp-for="NgayBatDau" class="form-control" />
                 <span asp-validation-for="NgayBatDau" class="text-danger"></span>
                 <span class="text-danger">@ViewData["NgayBatDau"]</span>
             </div>
             <div class="form-group">
-                <label asp-for="NgayKetThuc" class="control-label"></label>
+                <label class="control-label">Ngày kết thúc</label>
                 <input asp-for="NgayKetThuc" class="form-control" />
                 <span asp-validation-for="NgayKetThuc" class="text-danger"></span>
                 <span class="text-danger">@ViewData["NgayKetThuc"]</span>
@@ -66,24 +66,24 @@
             </div>
             <span class="text-danger">@ViewData["LGG"]</span>
             <div class="form-group">
-                <label asp-for="GiaTriGiam" class="control-label"></label>
+                <label class="control-label">Gía trị giảm</label>
                 <input asp-for="GiaTriGiam" class="form-control" />
                 <span asp-validation-for="GiaTriGiam" class="text-danger"></span>
                 <span class="text-danger">@ViewData["GiaTriGiam"]</span>
             </div>
             <div class="form-group">
-                <label asp-for="SoLuong" class="control-label"></label>
+                <label class="control-label">Số lượng</label>
                 <input asp-for="SoLuong" class="form-control" />
                 <span asp-validation-for="SoLuong" class="text-danger"></span>
                 <span class="text-danger">@ViewData["SoLuong"]</span>
             </div>
             <div class="form-group">
-                <label asp-for="MoTa" class="control-label"></label>
+                <label class="control-label">Mô tả</label>
                 <input asp-for="MoTa" class="form-control" />
                 <span asp-validation-for="MoTa" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TrangThai" class="control-label"></label>
+                <label class="control-label">Trạng thái</label>
                 <input asp-for="TrangThai" class="form-control" />
                 <span asp-validation-for="TrangThai" class="text-danger"></span>
                 <span class="text-danger">@ViewData["TrangThai"]</span>
