--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -3,10 +3,11 @@
 @model IEnumerable<HN120_ShopQuanAo.View.Areas.Admin.Data.ChiTietSPView>
 
     @{
-   Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+  Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
     IEnumerable<Voucher> lstvc = ViewBag.lstVC as IEnumerable<Voucher>;
     IEnumerable<User> ListUseradmin = ViewBag.ListUseradmin as IEnumerable<User>;
-    IEnumerable<User> ListUsers = ViewBag.ListUsers as IEnumerable<User>;
+    IEnumerable<ThanhToan> lstThanhToan = ViewBag.lstThanhToan as IEnumerable<ThanhToan>;
+    //IEnumerable<User> user = ViewBag.user as IEnumerable<User>;
     IEnumerable<ThanhToan_ThanhToanHistory> thanhtoanhoadon = ViewBag.thanhtoanhoadon as IEnumerable<ThanhToan_ThanhToanHistory>;
    
     }
@@ -15,15 +16,21 @@
     #chitiethoadon_table td:nth-child(1) {
         display: none;
     }
+
+
     </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/styles/metro/notify-metro.css" />
 <script src="~/js/Hoadon/getdiachi.js"></script>
 <script src="~/js/HoaDon.js"></script>
+
 <div class="row justify-content-center">
     <div class="card">
         <div class="card-header">
@@ -52,7 +59,7 @@
                       </div>
                       <div class="col-md-6" style="display:none">
                           <label for="btn_Status">Trạng thái</label>
-                          <input id="btn_Status" class="form-control" type="text" value="5" />
+                          <input id="btn_Status" class="form-control" type="text" />
                       </div>                   
                   </div>
               </div>
@@ -63,9 +70,9 @@
                           <label for="btn_TenKhachHang">Tên khách hàng</label>
                             <select id="btn_TenKhachHang" class="form-control">
                                 <option value="">Khách lẻ</option>
-                                @foreach (var item in ListUsers)
+                                @foreach (var item in ViewBag.user)
                                 {
-                                    <option value="@item.Id">@item.FullName</option>
+                                    <option value="@item.idUser" data-tinh="@item.tinhthanh" data-quanhuyen="@item.quanhuyen" data-xaphuong="@item.xaphuong" data-cuthe="@item.cuthe">@item.Ten</option>
                                 }
                                
                             </select>
@@ -80,36 +87,31 @@
                             <input id="btn_NgayTaoDon" class="form-control" type="date" />
                         </div>
                       <div class="col-md-4">
-                          <label for="btn_TinhThanh">Tỉnh thành</label>
-                          <select id="btn_TinhThanh" class="form-control">
-                              <option value="">Chọn Tỉnh/Thành</option>
-                          </select>
-                          <div id="tinhThanhLoader" class="spinner-border text-primary" role="status"style="display:none;">
-                              <span class="sr-only">Loading...</span>
-                          </div>
+                            <label for="City">Tỉnh/Thành phố</label>
+                            <select class="form-control" id="city" name="City">
+                                <option value="" selected>Chọn tỉnh thành</option>
+                            </select>                      
                       </div>
                       <div class="col-md-4">
-                          <label for="btn_QuanHuyen">Quận/Huyện</label>
-                          <select id="btn_QuanHuyen" class="form-control" disabled>
-                              <option value="">Chọn Quận/Huyện</option>
-                          </select>
-                          <div id="quanHuyenLoader" class="spinner-border text-primary" role="status"style="display:none;">
-                              <span class="sr-only">Loading...</span>
-                          </div>
+                            <label for="District">Quận/Huyện</label>
+                            <select class="form-control"  id="district" name="District">
+                                <option value="" selected>Chọn quận huyện</option>
+                            </select>
                       </div>
                       <div class="col-md-4">
-                          <label for="btn_XaPhuong">Xã/Phường</label>
-                          <select id="btn_XaPhuong" class="form-control" disabled>
-                              <option value="">Chọn Xã/Phường</option>
-                          </select>
-                          <div id="xaPhuongLoader" class="spinner-border text-primary" role="status"style="display:none;">
-                              <span class="sr-only">Loading...</span>
-                          </div>
+                            <label for="Ward">Phường/Xã</label>
+                            <select class="form-control" id="ward" name="Ward">
+                                <option value="" selected>Chọn phường xã</option>
+                            </select>
                       </div>
-                     @*  <div class="col-md-4">
-                          <label for="btn_PhiShip">Phí ship (VNĐ)</label>
-                          
-                      </div> *@
+                      <div class="col-md-4">
+                            <label for="street">Địa chỉ cụ thể</label>
+                            <input type="text" class="form-control" name="Street" id="street">
+                      </div>
+                      <div class="col-md-4">
+                            <label for="clear"></label>
+                            <button type="text" class="form-control w-50" name="Street" id="clear">Reset địa chỉ</button>
+                      </div>
                  </div>
               </div>
           
@@ -235,8 +237,11 @@
 
                 <div class="col-md-4 border border-5" style="height: 670px;">
                     <div class="row" style="height: 60%;">
-                        <div class="co-md-12" style="height:100px"><h2>Chi tiết thanh toán</h2></div>
+                        <div class="co-md-12" style="height:100px">
+                            <h2>Chi tiết thanh toán</div>
+                        
                         <table class="info-table">
+                            
                             <tr>
                                 <th style="width:130px;padding: 12px"> Tổng số tiền sản phẩm</th>
                                 <td><input id="btn_tongtien" style="color:brown;border:none" class="form-control w-100" type="text"></td>
@@ -275,24 +280,38 @@
                                 <td><input id="btn_tienthua" style="color:brown;border:none" class="form-control w-100" type="text"></td>
                                 <td>VNĐ</td>
                             </tr>
-                        </table>
-                       <hr />
+                        </table>               <hr />
                         <div class="col-md-12" style="height:40%;">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <button type="button" class="btn btn-warning" id="btn_dathang" style="width: 100%; height: 100%;">
-                                        Đổi phương thức thanh toán
-                                    </button>
+
+                                    <select id="btn_phuongthucthanhtoan" class="btn btn-outline-warning w-100" style="height:100%">
+                                        @foreach (var item in lstThanhToan)
+                                        {
+                                         <option value="@item.MaPhuongThuc">@item.TenPhuongThuc</option>
+                                       
+                                        }
+                                      
+                                    </select>
 
                                 </div>
                                 <div class="col-md-8">
-                                    <button type="button" class="btn btn-info" id="btn_thanhtoanhoadon" style="width: 100%; height: 70px;">
-                                        <h5 style="margin: 0;">Thanh toán</h5>
-                                    </button><hr />
-                                    <button type="button" class="btn btn-outline-success" id="btn_dathang" style="width: 100%; height: 70px;">
-                                        <h5 style="margin: 0;">Đặt hàng</h5>
-                                    </button>
+
+                                    <div class="col-md-12">
+                                        <button type="button" class="btn btn-info" id="btn_thanhtoanhoadon" style="width: 100%; height: 70px;">
+                                            <i class="fa-solid fa-coins fa-2xl" style="color:#de0d0d"></i>
+                                        </button><hr />
+
+                                    </div>
+                                    <div class="col-md-12">
+                                        <button type="button" class="btn btn-outline-success" id="btn_dathang" style="width: 100%; height: 100%;">
+                                            <i class="fa-solid fa-truck-arrow-right fa-xl" style="width: 100%; height:100%;"></i>
+                                        </button>
+                                    </div>
+
                                 </div>
+                               
+                               
                             </div>
                            
 
@@ -309,4 +328,33 @@
 </div>
 
 
+@* Modal thanh toán  QR code *@
+<div class="modal fade" tabindex="-1" id="pop_QR">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Thông tin chuyển khoản</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="col-md-12">
+                    <span id="countdown"></span>
+                </div>
+                <div class="col-md-12">
+                    <img width="100%" id="imgQR" src="https://img.vietqr.io/image/MB-0336262156-qr_only.png" />
+                </div>
+                <div class="col-md-12">
+                    <input id="btn_thongtinhoadon" style="color:brown;border:none" class="form-control w-100" type="text" value="Chuyen khoan cho lu an hai">
+                </div>
+                 <div class="col-md-12">
+                       
+                    <label for="btn_sotienck" class="form-control">Số tiền: 
+                       
+                        <span id="btn_sotienck"></span>
+                    </label>
+                </div>
 
+             </div>
+         </div>
+    </div>
+</div>
